--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
-#kitty{
-    width: 100px;
-    height: 100px;
-    position: relative;
-    top: 0;
-    left: 0;
+body{
+display: flex;
+flex-wrap: nowrap;
+justify-content: center;
+flex-direction: column;
+align-items: center;
+text-align: center;
 }
