--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,68 @@
-/* Angel */
-#Instructions{
+
+body{
+    background-color: rgb(0, 0, 0);
+}
+.neonText {
+    animation: pulsate 1s infinite alternate;
+    color: #fff;
+  }
+  
+  h1 {
+    font-size: 4.2rem; 
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    } 
+  
+  
+  
+  /* Flickering animation */
+  @keyframes pulsate {
+    100% {
+      /* Larger blur radius */
+      text-shadow:
+        0 0 1px #fff,
+        0 0 2px #fff,
+        0 0 3px #fff,
+        0 0 15px rgb(87, 125, 64),
+        0 0 18px rgb(87, 125, 64),
+        0 0 30px rgb(87, 125, 64),
+        0 0 45px rgb(87, 125, 64),
+        0 0 55px rgb(87, 125, 64);
     }
+   0% {
+      /* A slightly smaller blur radius */
+      text-shadow:
+        0 0 1px #fff,
+        0 0 2px #fff,
+        0 0 4px #fff,
+        0 0 15px rgb(87, 125, 64),
+        0 0 30px rgb(87, 125, 64),
+        0 0 30px rgb(87, 125, 64),
+        0 0 47px rgb(87, 125, 64),
+        0 0 70px rgb(87, 125, 64);
+    }
+  }
+    
+    20%, 24%, 55% {        
+        text-shadow: none;
+    }   
+    
+.instructions {
+    color: #c0c6ba;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;   
+}
+  
+
+    
+  
